--- a/views/webview.pug
+++ b/views/webview.pug
@@ -3,9 +3,9 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title The first webview
+        title {title}
     body
-    
+
         h1 Here goes the title
         p
         |This is the first text 
