--- a/views/webview.pug
+++ b/views/webview.pug
@@ -8,6 +8,6 @@ html(lang="en")
 
         h1 Here goes the title
         p
-        |This is the first text 
+        |This is the first text, the message is #{title}
 
     footer
