--- a/views/webview.pug
+++ b/views/webview.pug
@@ -4,6 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{title}
+        style. 
+            body{background-color:gray;}
     body
         script. 
             (function(d, s, id){
