--- a/views/webview.pug
+++ b/views/webview.pug
@@ -8,7 +8,8 @@ html(lang="en")
             body{background-color:gray;}
             .main_container {
                              background-color:white;
-                             width:150px;
+                             max-width:450px;
+                             text-align:center;
 
             }
     body
