--- a/views/webview.pug
+++ b/views/webview.pug
@@ -8,6 +8,8 @@ html(lang="en")
             body{background-color:gray;}
             .main_container {
                              background-color:white;
+                             margin:auto;
+                             padding:10px;
                              max-width:450px;
                              text-align:center;
 
