--- a/views/webview.pug
+++ b/views/webview.pug
@@ -4,6 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{title}
+        link(href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css')
+
         style. 
             body{background-color:gray;}
             .main_container {
@@ -11,8 +13,15 @@ html(lang="en")
                              margin:auto;
                              padding:10px;
                              max-width:450px;
-                             text-align:center;
-
+                             text-align:center; }
+            h1{
+                font-family:lato;
+                font-size:24px; 
+                font-style:bold; }
+            p{
+                font-family:lato;
+                font-size:12px; 
+                font-style:normal;
             }
     body
         script. 
