--- a/views/webview.pug
+++ b/views/webview.pug
@@ -45,7 +45,7 @@ html(lang="en")
              |hello #{name} This is the first text, the message is #{title}
             br
             #profile_picture
-                img src=#{profile_pic} width=100%
+                img(src=#{profile_pic} alt="Profile" width=100%)
             p
              |your sender_psid is #{sender_psid}
 
