--- a/views/webview.pug
+++ b/views/webview.pug
@@ -47,8 +47,8 @@ html(lang="en")
             #profile_picture
                 script.
                  alert(profile_pic);
-                 
-                img(src="#{profile_pic}" alt="Profile" width=100%)
+
+                img(src="https://i.pinimg.com/originals/aa/c3/80/aac38056c5f66c34f769f5c21562ebb7.jpg" alt="Profile" width=100%)
             p
              |your sender_psid is #{sender_psid}
 
