--- a/views/webview.pug
+++ b/views/webview.pug
@@ -45,8 +45,7 @@ html(lang="en")
              |hello #{name} This is the first text, the message is #{title}
             br
             #profile_picture
- 
-                img(src="https://i.pinimg.com/originals/aa/c3/80/aac38056c5f66c34f769f5c21562ebb7.jpg" alt="Profile" width=100%)
+                img(src=profile_pic alt="Profile" width="100%")
             p
              |your sender_psid is #{sender_psid}
 
