--- a/views/webview.pug
+++ b/views/webview.pug
@@ -25,7 +25,7 @@ html(lang="en")
                 font-size:12px; 
                 font-style:normal;
              }
-             #profile_picture.img {
+             img {
                  border-radius:50px;
              }
     body
