--- a/views/webview.pug
+++ b/views/webview.pug
@@ -24,9 +24,14 @@ html(lang="en")
                 font-family:lato;
                 font-size:12px; 
                 font-style:normal;
+                             }
+             #profile_picture {
+                 width:90%;
+                 height:150px;
              }
              img {
-                 border-radius:50px;
+                 width:100%;
+                 height:auto;
              }
     body
         script. 
