--- a/views/webview.pug
+++ b/views/webview.pug
@@ -28,6 +28,8 @@ html(lang="en")
              #profile_picture {
                  width:90%;
                  height:150px;
+                 border-radius:10px;
+                 overflow:none;
              }
              img {
                  width:100%;
