--- a/views/webview.pug
+++ b/views/webview.pug
@@ -31,7 +31,7 @@ html(lang="en")
                  border-radius:10px;
                  overflow:none;
              }
-             img {
+             #profile_picture img {
                  width:100%;
                  height:auto;
              }
@@ -52,7 +52,7 @@ html(lang="en")
              |hello #{name} This is the first text, the message is #{title}
             br
             #profile_picture
-                img(src=profile_pic alt="Profile" width="100%")
+                img(src=profile_pic alt="Profile")
             p
              |your sender_psid is #{sender_psid}
 
