--- a/views/webview.pug
+++ b/views/webview.pug
@@ -27,9 +27,10 @@ html(lang="en")
                              }
              #profile_picture {
                  width:90%;
-                 height:150px;
+                 height:350px;
                  border-radius:10px;
                  overflow:none;
+                 background-color:red;
              }
              #profile_picture img {
                  width:100%;
