--- a/views/webview.pug
+++ b/views/webview.pug
@@ -26,10 +26,10 @@ html(lang="en")
                 font-style:normal;
                              }
              #profile_picture {
-                 width:90%;
+                 width:100%;
                  height:350px;
                  border-radius:10px;
-                 overflow:none;
+                 overflow:hidden;
                  background-color:red;
              }
              #profile_picture img {
