--- a/views/webview.pug
+++ b/views/webview.pug
@@ -30,7 +30,7 @@ html(lang="en")
                  height:350px;
                  border-radius:10px;
                  overflow:hidden;
-                 background-color:red;
+                 box-shadow: 5px 10px;
              }
              #profile_picture img {
                  width:100%;
@@ -64,7 +64,7 @@ html(lang="en")
         script. 
             window.extAsyncInit = function() {
              // the Messenger Extensions JS SDK is done loading 
-             alert("facebook sdk has finished loading");
+             //alert("facebook sdk has finished loading");
              };
        
 
