--- a/views/webview.pug
+++ b/views/webview.pug
@@ -30,7 +30,9 @@ html(lang="en")
                  height:350px;
                  border-radius:10px;
                  overflow:hidden;
-                 box-shadow: 5px 10px;
+                 -webkit-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
+                 -moz-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
+                 box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
              }
              #profile_picture img {
                  width:100%;
