--- a/views/webview.pug
+++ b/views/webview.pug
@@ -26,8 +26,8 @@ html(lang="en")
                 font-style:normal;
                              }
              #profile_picture {
-                 width:100%;
-                 height:350px;
+                 width:200px;
+                 height:200px;
                  border-radius:50px;
                  overflow:hidden;
                  -webkit-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
