--- a/views/webview.pug
+++ b/views/webview.pug
@@ -28,7 +28,7 @@ html(lang="en")
              #profile_picture {
                  width:200px;
                  height:200px;
-                 border-radius:50px;
+                 border-radius:50%;
                  overflow:hidden;
                  -webkit-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
                  -moz-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
