--- a/views/webview.pug
+++ b/views/webview.pug
@@ -26,6 +26,7 @@ html(lang="en")
                 font-style:normal;
                              }
              #profile_picture {
+                 margin:auto;
                  width:200px;
                  height:200px;
                  border-radius:50%;
