--- a/views/webview.pug
+++ b/views/webview.pug
@@ -26,6 +26,8 @@ html(lang="en")
                 font-style:normal;
                              }
              #profile_picture {
+                 margin-top:50px;
+                 margin-bottom:50px;
                  margin:auto;
                  width:200px;
                  height:200px;
