--- a/views/webview.pug
+++ b/views/webview.pug
@@ -28,7 +28,8 @@ html(lang="en")
              #profile_picture {
                  margin-top:50px;
                  margin-bottom:50px;
-                 margin:auto;
+                 margin-left:auto;
+                 margin-right:auto;
                  width:200px;
                  height:200px;
                  border-radius:50%;
