--- a/views/webview.pug
+++ b/views/webview.pug
@@ -7,7 +7,8 @@ html(lang="en")
         link(href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css')
 
         style. 
-            body{background-color:gray;}
+            body{background-color:#fffefa;}
+
             .main_container {
                  background-color:white;
                  margin:auto;
