--- a/views/webview.pug
+++ b/views/webview.pug
@@ -25,6 +25,7 @@ html(lang="en")
                 font-family:lato;
                 font-size:12px; 
                 font-style:normal;
+                margin-top:40px
                              }
              #profile_picture {
                  margin-top:50px;
