--- a/views/webview.pug
+++ b/views/webview.pug
@@ -15,6 +15,9 @@ html(lang="en")
                  padding:10px;
                  max-width:450px;
                  text-align:center; 
+                 -webkit-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
+                 -moz-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
+                 box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
              }
             h1 {
                 font-family:lato;
