--- a/views/webview.pug
+++ b/views/webview.pug
@@ -47,6 +47,30 @@ html(lang="en")
                  width:100%;
                  height:auto;
              }
+             .myButton {
+	            box-shadow: 0px 10px 14px -7px #276873;
+	            background:linear-gradient(to bottom, #00b3ff 5%, #006aff 100%);
+            	background-color:#00b3ff;
+	            border-radius:15px;
+	            display:inline-block;
+            	cursor:pointer;
+               	color:#ffffff;
+            	font-family:Arial;
+            	font-size:20px;
+            	font-weight:bold;
+            	padding:17px 44px;
+	            text-decoration:none;
+	            text-shadow:0px 1px 0px #3d768a;
+            }
+            .myButton:hover {
+            	background:linear-gradient(to bottom, #006aff 5%, #00b3ff 100%);
+            	background-color:#006aff;
+            }
+            .myButton:active {
+            	position:relative;
+            	top:1px;
+            }
+
     body
         script. 
             (function(d, s, id){
@@ -65,6 +89,9 @@ html(lang="en")
                  
             #profile_picture
               img(src=profile_pic alt="Profile")
+              br
+
+            a.myButton(href='#') G&aring; videre  
             p
              |your sender_psid is #{sender_psid}
 
