--- a/views/webview.pug
+++ b/views/webview.pug
@@ -23,6 +23,7 @@ html(lang="en")
                 font-family:lato;
                 font-size:24px; 
                 font-style:normal; 
+                margin-top:50
             }
             p {
                 font-family:lato;
