--- a/views/webview.pug
+++ b/views/webview.pug
@@ -85,13 +85,13 @@ html(lang="en")
         
         .main_container
 
-            h1 Here goes the title
+            h1 This is the title
             p
              |hello #{name} This is the first text, the message is #{title}
                  
             #profile_picture
               img(src=profile_pic alt="Profile")
-              br
+              
 
             a.myButton(href='#') G&aring; videre  
             p
