--- a/views/webview.pug
+++ b/views/webview.pug
@@ -18,6 +18,7 @@ html(lang="en")
                  -webkit-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
                  -moz-box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
                  box-shadow: 4px 6px 28px -7px rgba(0,0,0,0.52);
+                 display:none;
             }
             h1 {
                 font-family:lato;
@@ -105,6 +106,7 @@ html(lang="en")
             window.extAsyncInit = function() {
              // the Messenger Extensions JS SDK is done loading 
              //alert("facebook sdk has finished loading");
+             document.getElementByClassName("main_container").style.display="block";
              };
        
 
