--- a/views/webview.pug
+++ b/views/webview.pug
@@ -106,7 +106,7 @@ html(lang="en")
             window.extAsyncInit = function() {
              // the Messenger Extensions JS SDK is done loading 
              //alert("facebook sdk has finished loading");
-             document.getElementByClassName("main_container").style.display="block";
+             document.getElementsByClassName("main_container").style.display="block";
              };
        
 
