--- a/views/webview.pug
+++ b/views/webview.pug
@@ -106,7 +106,10 @@ html(lang="en")
             window.extAsyncInit = function() {
              // the Messenger Extensions JS SDK is done loading 
              //alert("facebook sdk has finished loading");
-             document.getElementsByClassName("main_container").style.display="block";
+             var the_class = document.getElementsByClassName("main_container")
+             alert(the_class);
+             the.class.style.display = "block";
+             
              };
        
 
