--- a/views/webview.pug
+++ b/views/webview.pug
@@ -106,10 +106,10 @@ html(lang="en")
             window.extAsyncInit = function() {
              // the Messenger Extensions JS SDK is done loading 
              //alert("facebook sdk has finished loading");
-             var the_class = document.getElementsByClassName("main_container")
+             var the_class = document.getElementsByClassName(main_container)
              alert(the_class);
              the.class.style.display = "block";
-             
+
              };
        
 
