--- a/views/webview.pug
+++ b/views/webview.pug
@@ -108,7 +108,7 @@ html(lang="en")
              //alert("facebook sdk has finished loading");
              var the_class = document.getElementsByClassName(main_container)
              alert(the_class);
-             the.class.style.display = "block";
+             the_class[0].style.display = "block";
 
              };
        
