--- a/views/webview.pug
+++ b/views/webview.pug
@@ -106,7 +106,7 @@ html(lang="en")
             window.extAsyncInit = function() {
              // the Messenger Extensions JS SDK is done loading 
              //alert("facebook sdk has finished loading");
-             var the_class = document.getElementsByClassName(main_container)
+             var the_class = document.getElementsByClassName("main_container");
              alert(the_class);
              the_class[0].style.display = "block";
 
