--- a/views/webview.pug
+++ b/views/webview.pug
@@ -49,7 +49,7 @@ html(lang="en")
                 width:100%;
                 height:auto;
             }
-            .myButton {
+            #myButton {
                 box-shadow: 0px 10px 14px -7px #276873;
                 background:linear-gradient(to bottom, #00b3ff 5%, #006aff 100%);
                 background-color:#00b3ff;
@@ -64,11 +64,11 @@ html(lang="en")
                 text-decoration:none;
                 text-shadow:0px 1px 0px #3d768a;
             }
-            .myButton:hover {
+            #myButton:hover {
             	 background:linear-gradient(to bottom, #006aff 5%, #00b3ff 100%);
             	 background-color:#006aff;
             }
-            .myButton:active {
+            #myButton:active {
             	 position:relative;
             	 top:1px;
             }
@@ -94,7 +94,7 @@ html(lang="en")
               img(src=profile_pic alt="Profile")
               
 
-            a.myButton() G&aring; videre  
+            a#myButton() G&aring; videre  
             p
              |your sender_psid is #{sender_psid}
 
@@ -108,6 +108,11 @@ html(lang="en")
              //alert("facebook sdk has finished loading");
              var the_class = document.getElementsByClassName("main_container");
              the_class[0].style.display = "block";
+
+             //add the eventlistener
+             document.getElementById("myButton").addEventListner("click" () => {
+                 alert("button clicked");
+             })
 
              };
        
