--- a/views/webview.pug
+++ b/views/webview.pug
@@ -110,7 +110,7 @@ html(lang="en")
              the_class[0].style.display = "block";
 
              //add the eventlistener
-             document.getElementById("myButton").addEventListner("click", () => {
+             document.getElementById("myButton").addEventListener("click", () => {
                  alert("button clicked");
              })
 
