--- a/views/webview.pug
+++ b/views/webview.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{title}
         link(href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css')
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
 
         style. 
             body{background-color:#fffefa;}
@@ -111,7 +112,32 @@ html(lang="en")
 
              //add the eventlistener
              document.getElementById("myButton").addEventListener("click", () => {
-                 alert("button clicked");
+                alert("button clicked");
+                //write some data to a custom_data field
+                //ajax call to the customfield API get the appropriat customfield from qs 
+                var url = "https://phonestats.herokuapp.com/api/messenger/messenger_processes/customfields";
+                var data = {"sender_psid" : sender_psid, "field_name": field_name, "field_value": "click from webview"};
+
+                $.ajax({
+                    url:url,
+                    type:"POST",
+                    data:data,
+                    success:function(data) {
+                        alert("data sendt to server");
+                        console.log({data_sendt_to_server:data})
+                    },
+                    error:function(data) {
+                        console.log(data);
+                        alert("error no data sendt");
+                    }
+                });
+                
+                
+
+                 //start a new process 
+                 //ajax call to? 
+
+                 //use the facebook sdk method to close the window... 
              })
 
              };
