--- a/views/webview.pug
+++ b/views/webview.pug
@@ -115,28 +115,44 @@ html(lang="en")
                 alert("button clicked");
                 //write some data to a custom_data field
                 //ajax call to the customfield API get the appropriat customfield from qs 
-                var url = "https://phonestats.herokuapp.com/api/messenger/messenger_processes/customfields";
-                var data = {"sender_psid" : "#{sender_psid}", "field_name": "#{field_name}", "field_value": "click from webview"};
+                function()
+                var custom_field_url = "https://phonestats.herokuapp.com/api/messenger/messenger_processes/customfields";
+                var custom_data = {"sender_psid" : "#{sender_psid}", "field_name": "#{field_name}", "field_value": "click from webview"};
                 console.log(data);
 
                 $.ajax({
-                    url:url,
+                    url:custom_field_url,
                     type:"POST",
-                    data:data,
+                    data:custom_data,
                     success:function(data) {
-                        alert("data sendt to server");
-                        console.log({data_sendt_to_server:data})
+                        console.log({data_sent_to_server:data})
                     },
                     error:function(data) {
                         console.log(data);
-                        alert("error no data sendt");
+                        alert("an error occured no data sent");
                     }
                 });
                 
                 
-
                  //start a new process 
-                 //ajax call to? 
+                 //ajax call to webhook containg a webhook? 
+                var webhook_url = "https://phonestats.herokuapp.com/messengerapp/webhook";
+                var webhook_data = {"sender_psid":#{sender_psid}, "postback":"test"};
+                
+                $.ajax({
+                    url:webhook_url,
+                    type:"POST",
+                    data:webhook_data,
+                    success:function(data) {
+                        console.log({data_sent_to_server:data})
+                    },
+                    error:function(data) {
+                        console.log(data);
+                        alert("an error occured no data sent");
+                    }
+                });
+                
+
 
                  //use the facebook sdk method to close the window... 
              })
