--- a/views/webview.pug
+++ b/views/webview.pug
@@ -138,7 +138,7 @@ html(lang="en")
                  //ajax call to webhook containg a webhook? 
                 var webhook_url = "https://phonestats.herokuapp.com/messengerapp/webview_webhook";
                 var payload = JSON.stringify({messenger_process:"start_menu"});
-                var webhook_data = {"sender_psid":"#{sender_psid}", "postback":payload};
+                var webhook_data = {"sender_psid":"#{sender_psid}", "payload":payload};
                 
                 $.ajax({
                     url:webhook_url,
