--- a/views/webview.pug
+++ b/views/webview.pug
@@ -12,6 +12,7 @@ html(lang="en")
 
             .main_container {
                  background-color:white;
+                 margin-top:20px;
                  margin:auto;
                  padding:10px;
                  max-width:450px;
