lager hook function for custom_fields

--- a/views/webview.pug
+++ b/views/webview.pug
@@ -139,7 +139,7 @@ html(lang="en")
                  //ajax call to webhook containg a webhook? 
 
                 var webhook_url = "https://phonestats.herokuapp.com/messengerapp/webview_webhook";
-                var payload = JSON.stringify({messenger_process:"Getting_started"});
+                var payload = JSON.stringify({messenger_process:"Pizza_confirm"});
                 var webhook_data = {"sender_psid":"#{sender_psid}", "payload":payload};
                 
                 $.ajax({
